--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 6rem 2rem 0 2rem;
+    padding: 6rem 2rem 0 2rem !important;
     backdrop-filter: blur(4px);
 }
 
